fix: change highlight retrieval to return only storyId list